--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,11 @@
     display: flex;
     justify-content: center;
 }
+
+.imgRemeras{
+    padding: 4%;
+}
+
+.cardRemeras{
+    margin-right: 3%;
+}
