--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,17 @@
 .cardRemeras{
     margin-right: 3%;
 }
+
+.imgLogo{
+    width: 100px;
+}
+
+.menuStyle{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.buscadorMain{
+    display: flex;
+    justify-content: center;
+}
